--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/68973c6d6ec67e192b924cee/1j27c83an';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
   <h1>Simple Speak Pal</h1>
   <p id="phrase">Say this: <strong>Hello, how are you?</strong></p>
 
